# ProjectCarHAN

./: .gitignore  CMakeLists.txt  README.md  README.org  Specs.md  cmake.org  code_standards.md  infrared_sensor_test.ino  to_talk_about.org  todos.json  ultrasonic_sensor_test.ino
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compile_test.yml
3D designs/Richtingaanwijzer/: Richtingaanwijzer houder v1.1.step  Richtingaanwijzer houder v1.1.stl  Richtingaanwijzer houder.step  Richtingaanwijzer houder.stl
RobotCar/: RobotCar.componentinfo.xml  RobotCar.cproj  main.c
RobotCar/DataTypes/: FIFO.c  FIFO.h
RobotCar/Display/: display.c  display.h
RobotCar/DriveModes/: autonomous.c  autonomous.h  modes.h  remote.c  remote.h
RobotCar/EEPROM/: EEPROM.c  EEPROM.h  userTime.c  userTime.h
RobotCar/Functions/: Appinfo.h  Pinmap.c  Pinmap.h
RobotCar/Functions/Buttons/: mode_select.c  mode_select.h  mode_select.old
RobotCar/Functions/Millis/: Millis.c  Millis.h
RobotCar/IR_Sensors/: IR.c  IR.h
RobotCar/Modes/: autonomous.c  autonomous.h  manual.c  manual.h  slave.c  slave.h
RobotCar/Motor/: motor.c  motor.h
RobotCar/Motor_controls/: motor_controls.c  motor_controls.h
RobotCar/Uart/: Uart.c  Uart.h
RobotCar/i2c/: I2C.h  display.c  display.h  i2c.c  i2c.h  lcd.c  lcd.h
RobotCar/ultrasonic/: Ultrasonic.c  Ultrasonic.h
code/: Mode_select.ino  Modes.cpp  display_test.ino  ultrasonic_sensor_test.ino
code/Autonomous/: Autonomous.ino  motor_controls.cpp  motor_controls.h  ultrasoon.cpp  ultrasoon.h
code/Car_full_code/: Car_full_code.ino  Functions.cpp  Mode_Autonomous.cpp  Mode_Autonomous.h  Mode_Manual.cpp  Mode_Select.cpp  Mode_Slave.cpp  Modes.cpp  display.cpp  display.h  display_test.ino  motor_controls.cpp  motor_controls.h  sketch.yaml  ultrasoon.cpp  ultrasoon.h  userTime.cpp
code/EEPROM_reset/: EEPROM_reset.ino
code/Mode_Menu/: Mode_Select.cpp
code/Mode_select/: Functions.h  Modes.h
code/Test_Motor_controls_v2/: Test_Motor_controls_v2.ino  motor_controls.cpp  motor_controls.h
code/car_remote_control/: car_remote_control.ino  motorControl_test.ino  motor_controls.h
code/display_test/: Mode_Autonomous.cpp  Mode_Manual.cpp  Mode_Manual.h  Mode_Select.cpp  Mode_Select.h  Mode_Slave.cpp  Mode_Slave.h  display.cpp  display.h  display_test.ino  userTime.cpp  userTime.h
code/infrared_sensor_test/: infrared_sensor_test.ino
code/motorTest_USB_Remote_Control_V2/: motor_controls.cpp  motor_controls.h
code/motorcontrol_struct_test/: motorcontrol_struct.ino
code/time_used/: display.cpp  display.h  time_used.ino  userTime.cpp  userTime.h
code/ultrasonic_sensor_test_average/: ultrasonic_sensor_test_average.ino
uml/: communication.puml
uml/actor/: display.puml  led.puml  motor.puml
uml/sensor/: Switch.puml  infrarood.puml  ultrasoon.puml
(+24 files in other folders)
